# santui

./: .audit.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  fix-yaml-temp.js  lefthook.yml  plugins-manifest.json  plugins-x86_64-unknown-linux-gnu.json  plugins.json
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/app/: mod.txt
crates/core/src/: auth.rs  config.rs  db_access.rs  event.rs  lib.rs  logger.rs  plugin.rs  registry_config.rs  sync.rs  theme.rs
crates/core/src/app/: app_state.rs  handle_key.rs  mod.rs  palette.rs  palette_controller.rs  palette_widget.rs  plugin_manager.rs  registry.rs  registry_controller.rs  registry_screen.rs  screens.rs  starfield.rs  status_bar.rs  theme_manager.rs
crates/core/src/widgets/: dim_overlay.rs  filtered_list.rs  mod.rs  popup.rs
crates/core/tests/: config_integration.rs  event_integration.rs  santui_integration.rs  theme_integration.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/dev-setup/: Cargo.toml
crates/dev-setup/src/: main.rs
crates/ipc/: Cargo.toml
crates/ipc/benches/: ipc_bench.rs
crates/ipc/src/: host.rs  lib.rs  protocol.rs  render.rs  ui.rs
crates/plugins/ai-chat/: Cargo.toml
crates/plugins/ai-chat/src/: main.rs
crates/plugins/api-monitor/: Cargo.toml
crates/plugins/archive-browser/: Cargo.toml
crates/plugins/archive-browser/src/: main.rs
crates/plugins/ascii-table/: Cargo.toml
crates/plugins/base64-encoder/: Cargo.toml
crates/plugins/base64-encoder/src/: main.rs
crates/plugins/batch-renamer/: Cargo.toml
crates/plugins/bmi-calculator/: Cargo.toml
crates/plugins/bookmark-launcher/: Cargo.toml
crates/plugins/bookmark-launcher/src/: main.rs
crates/plugins/breathing-exercise/: Cargo.toml
crates/plugins/breathing-exercise/src/: main.rs
crates/plugins/budget-tracker/: Cargo.toml
crates/plugins/calendar-agenda/: Cargo.toml
crates/plugins/calendar-agenda/src/: main.rs
crates/plugins/case-converter/: Cargo.toml
crates/plugins/case-converter/src/: main.rs
crates/plugins/cheatsheet-browser/: Cargo.toml
crates/plugins/chess/: Cargo.toml
crates/plugins/chess/src/: main.rs
crates/plugins/clipboard-history/: Cargo.toml
crates/plugins/clipboard-history/src/: clipboard.rs  main.rs  state.rs  ui.rs
crates/plugins/cloud-cost/: Cargo.toml
crates/plugins/code-runner/: Cargo.toml
crates/plugins/color-picker/: Cargo.toml
crates/plugins/color-picker/src/: main.rs
crates/plugins/connection-string-builder/: Cargo.toml
crates/plugins/cron-expression-helper/: Cargo.toml
crates/plugins/csv-viewer/: Cargo.toml
crates/plugins/csv-viewer/src/: main.rs
crates/plugins/currency-converter/: Cargo.toml
crates/plugins/currency-converter/src/: api.rs  main.rs  state.rs  ui.rs
crates/plugins/dashboard/: Cargo.toml
crates/plugins/dictionary-thesaurus/: Cargo.toml
crates/plugins/dictionary-thesaurus/src/: main.rs
crates/plugins/disk-usage/: Cargo.toml
crates/plugins/disk-usage/src/: main.rs
crates/plugins/dns-globe/: Cargo.toml
crates/plugins/dns-globe/src/: main.rs
crates/plugins/dns-lookup/: Cargo.toml
crates/plugins/docker-dashboard/: Cargo.toml
crates/plugins/docker-dashboard/src/: main.rs
crates/plugins/email-client/: Cargo.toml
crates/plugins/env-manager/: Cargo.toml
crates/plugins/erd-sketch/: Cargo.toml
crates/plugins/expense-splitter/: Cargo.toml
crates/plugins/expense-splitter/src/: main.rs
crates/plugins/file-diff/: Cargo.toml
crates/plugins/file-diff/src/: main.rs
crates/plugins/file-explorer/: Cargo.toml
crates/plugins/flashcards/: Cargo.toml
crates/plugins/fortune-cookie/: Cargo.toml
crates/plugins/game-of-life/: Cargo.toml
crates/plugins/git-repository-dashboard/: Cargo.toml
crates/plugins/github-browser/: Cargo.toml
crates/plugins/gpg-encryptor/: Cargo.toml
crates/plugins/graphql-playground/: Cargo.toml
crates/registry/: Cargo.toml
crates/registry/src/: config.rs  download.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  db.rs  main.rs  sync.rs  web.rs
crates/server/templates/: dashboard.html  login.html
docs/: architecture.md  audit-history.md  audit.md  conventions.md  development.md  ideas.md  index.md  ratatui-migration.md  release.md  roadmap.md
docs/.vitepress/: config.ts
docs/public/: llms.txt
native/: radio_stream_stations.db  radio_streaming_stations.db
plugin-template/: README.md
plugin-template/src/: main.rs
santui/: Cargo.toml
santui-auth/: Cargo.toml
santui-auth/src/: lib.rs
santui-core/: Cargo.toml
santui-core/src/: app.rs  lib.rs  plugin.rs  theme.rs
santui-ipc/: Cargo.toml
santui-ipc/src/: host.rs  lib.rs  protocol.rs
santui-npm/: .gitignore  README.md  index.js  install.js  package.json
santui-radio/: Cargo.toml
santui-radio-streaming-player/: Cargo.toml  radio_streaming_stations.json  stations.json
santui-radio-streaming-player/scraper/: Cargo.toml
santui-radio-streaming-player/scraper/src/: main.rs
santui-radio-streaming-player/src/: database.rs  itunes.rs  lib.rs  main.rs  player.rs  state.rs  stations.rs  ui.rs
santui-radio-streaming-player/tests/: metadata_test.rs
santui-radio-streaming-scraper/src/: main.rs
santui-radio/src/: lib.rs  player.rs  ui.rs
santui-registry/src/: config.rs  download.rs  lib.rs
santui/src/: main.rs
scripts/: dev-setup.ps1  dev-setup.sh  package-release-linux.sh  package-release-macos.sh  package-release.ps1
src/: agent.rs  main.rs  scanner.rs
src/provider/: openai.rs  opencode.rs
templates/plugin/: Cargo.toml  README.md
templates/plugin/src/: main.rs
website/: .gitignore  index.md  package-lock.json  package.json  vercel.json
website/.vitepress/: config.ts
website/guide/: configuration.md  index.md  plugins.md  themes.md  what-is-santui.md
website/public/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
(+236 files in other folders)
