[workspace]
members = [
    "crates/core",
    "crates/ipc",
    "crates/auth",
    "crates/registry",
    "crates/db",
    "crates/plugins/radio-stream-player",
    "crates/plugins/system-monitor",
    "crates/plugins/world-clock",
    "crates/plugins/radio-stream-player/scraper",
    "crates/plugins/registry",
    "crates/plugins/weather",
    "crates/plugins/rss-reader",
    "crates/plugins/currency-converter",
    "crates/plugins/quick-notes",
    "crates/plugins/clipboard-history",
    "crates/plugins/hacker-news-reader",
    "crates/plugins/pomodoro-timer",
    "crates/plugins/music-preview",
    "crates/plugins/http-client",
    "crates/plugins/ssh-manager",
    "crates/plugins/habit-tracker",
    "crates/plugins/unit-converter",
    "crates/plugins/regex-tester",
    "crates/plugins/json-yaml-formatter",
    "crates/plugins/todo-task-manager",
    "crates/plugins/bookmark-launcher",
    "crates/plugins/cron-expression-helper",
    "crates/plugins/calendar-agenda",
    "crates/plugins/package-version-monitor",
    "crates/plugins/dictionary-thesaurus",
    "crates/plugins/git-repository-dashboard",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
