[workspace]
members = [
    "crates/core",
    "crates/ipc",
    "crates/auth",
    "crates/registry",
    "crates/db",
    "crates/plugins/radio-stream-player",
    "crates/plugins/system-monitor",
    "crates/plugins/world-clock",
    "crates/plugins/radio-stream-player/scraper",
    "crates/plugins/registry",
    "crates/plugins/weather",
    "crates/plugins/rss-reader",
    "crates/plugins/currency-converter",
    "crates/plugins/quick-notes",
    "crates/plugins/clipboard-history",
    "crates/plugins/hacker-news-reader",
    "crates/plugins/pomodoro-timer",
    "crates/plugins/music-preview",
    "crates/plugins/http-client",
    "crates/plugins/ssh-manager",
    "crates/plugins/habit-tracker",
    "crates/plugins/unit-converter",
    "crates/plugins/regex-tester",
    "crates/plugins/json-yaml-formatter",
    "crates/plugins/todo-task-manager",
    "crates/plugins/bookmark-launcher",
    "crates/plugins/cron-expression-helper",
    "crates/plugins/calendar-agenda",
    "crates/plugins/package-version-monitor",
    "crates/plugins/dictionary-thesaurus",
    "crates/plugins/git-repository-dashboard",
    "crates/plugins/quran-reader",
    "crates/plugins/iptv-player",
    "crates/plugins/api-monitor",
    "crates/plugins/archive-browser",
    "crates/plugins/batch-renamer",
    "crates/plugins/budget-tracker",
    "crates/plugins/chess",
    "crates/plugins/cloud-cost",
    "crates/plugins/connection-string-builder",
    "crates/plugins/dashboard",
    "crates/plugins/disk-usage",
    "crates/plugins/docker-dashboard",
    "crates/plugins/email-client",
    "crates/plugins/env-manager",
    "crates/plugins/erd-sketch",
    "crates/plugins/file-diff",
    "crates/plugins/file-explorer",
    "crates/plugins/mongo-explorer",
    "crates/plugins/pixel-art",
    "crates/plugins/port-scanner",
    "crates/plugins/postgres-console",
    "crates/plugins/process-manager",
    "crates/plugins/redis-explorer",
    "crates/plugins/sdk-playground",
    "crates/plugins/service-manager",
    "crates/plugins/snippet-manager",
    "crates/plugins/speed-test",
    "crates/plugins/sprint-retro",
    "crates/plugins/sql-playground",
    "crates/plugins/ssl-checker",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
