[package]
name = "santui-ipc"
version = "0.1.6"
edition = "2021"

[features]
default = ["host"]
host = ["dep:santui-core", "dep:ratatui", "dep:crossterm"]

[dependencies]
santui-core = { path = "../santui-core", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
