[package]
name = "santui-radio-streaming-player"
version = "0.1.2"
edition = "2021"

[dependencies]
santui-ipc = { path = "../santui-ipc", default-features = false }
libloading = "0.8"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
