[package]
name = "santui"
version = "0.1.6"
edition = "2021"

[dependencies]
santui-core = { path = "../santui-core" }
santui-ipc = { path = "../santui-ipc" }
santui-auth = { path = "../santui-auth", optional = true }
santui-registry = { path = "../santui-registry" }

[features]
default = []
auth = ["dep:santui-auth"]
