[package]
name = "santui"
version = "0.2.31"
edition = "2021"
description = "Santui — keyboard-driven TUI plugin launcher with OAuth sign-in"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.31" }
santui-ipc = { path = "../ipc", version = "0.2.31" }
santui-auth = { path = "../auth", version = "0.2.31", optional = true }
santui-registry = { path = "../registry", version = "0.2.31" }
santui-db = { path = "../db", version = "0.2.31" }
rusqlite = { version = "0.40", features = ["bundled"] }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["auth"]
auth = ["dep:santui-auth"]
