[package]
name = "santui-auth"
version = "0.2.10"
edition = "2021"
description = "Santui authentication — GitHub OAuth client with device flow support"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.10" }
ureq = "3"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
