[package]
name = "santui-auth"
version = "0.2.23"
edition = "2021"
description = "Santui authentication — GitHub OAuth client with device flow support"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.23" }
ureq = "3"
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
