[package]
name = "santui-core"
version = "0.2.12"
edition = "2021"
description = "Santui core framework — App, Plugin trait, events, config, palette"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
santui-registry = { path = "../registry", version = "0.2.12" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = { workspace = true }

[dev-dependencies]
proptest = "1"
