[package]
name = "santui-core"
version = "0.2.18"
edition = "2021"
description = "Santui core framework — App, Plugin trait, events, config, palette"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { workspace = true }
toml = "0.8"
log = { workspace = true }
ctrlc = { version = "3.5", features = ["termination"] }

[dev-dependencies]
proptest = "1"
