[package]
name = "santui-core"
version = "0.2.29"
edition = "2021"
description = "Santui core framework — App, Plugin trait, events, config, palette"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"
log = { workspace = true }
ctrlc = { version = "3.5", features = ["termination"] }
notify = "8"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
proptest = "1"
