[package]
name = "santui-db"
version = "0.2.23"
edition = "2021"
description = "Santui central SQLite database — per-user state for plugins"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
