[package]
name = "santui-ipc"
version = "0.2.5"
edition = "2021"

[features]
default = ["host"]
host = ["dep:santui-core", "dep:ratatui", "dep:crossterm"]

[dependencies]
santui-core = { path = "../core", version = "0.2.5", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
