[package]
name = "santui-ipc"
version = "0.2.7"
edition = "2021"
description = "Santui IPC protocol — typed messages and host plugin runner over JSON lines"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[features]
default = ["host"]
host = ["dep:santui-core", "dep:ratatui", "dep:crossterm"]

[dependencies]
santui-core = { path = "../core", version = "0.2.7", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { workspace = true }
