[package]
name = "santui-ipc"
version = "0.2.29"
edition = "2021"
description = "Santui IPC protocol — typed messages and host plugin runner over JSON lines"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[features]
default = ["host"]
host = ["dep:santui-core", "dep:ratatui", "dep:crossterm"]

[dependencies]
santui-core = { path = "../core", version = "0.2.29", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2", features = ["serde", "std"] }
log = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "ipc_bench"
harness = false
