[package]
name = "santui-registry"
version = "0.2.8"
edition = "2021"
description = "Santui plugin registry — manifest fetch, install, config management"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "3"
sha2 = "0.10"
