[package]
name = "santui-registry"
version = "0.2.24"
edition = "2021"
description = "Santui plugin registry — manifest fetch, install, config management"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.24" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
ureq = "3"
sha2 = "0.10"
