[package]
name = "santui-registry"
version = "0.2.32"
edition = "2021"
description = "Santui plugin registry — manifest fetch, install, config management"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.32" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"
ureq = "3"
sha2 = "0.11"
