[package]
name = "santui-server"
version = "0.2.29"
edition = "2021"
description = "Santui backend server — sync, auth, and web UI"
license = "MIT"
repository = "https://github.com/sonyarianto/santui"

[dependencies]
santui-core = { path = "../core", version = "0.2.29" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = "10"
rusqlite = { version = "0.40", features = ["bundled"] }
ureq = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
