[package]
name = "santui-ai-chat"
version = "0.2.32"
edition = "2021"

[[bin]]
name = "santui-ai-chat"
path = "src/main.rs"

[dependencies]
santui-ipc  = { path = "../../ipc",  version = "0.2.32", default-features = false }
ureq        = { version = "3", features = ["json"] }
serde_json  = "1"
log         = "0.4"
env_logger  = "0.11"
