[package]
name = "santui-base64-encoder"
version = "0.2.31"
edition = "2021"

[[bin]]
name = "santui-base64-encoder"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.31", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arboard = "3"
base64 = "0.22"
