[package]
name = "santui-calendar-agenda"
version = "0.2.33"
edition = "2021"

[[bin]]
name = "santui-calendar-agenda"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.33", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
arboard = "3"
