[package]
name = "santui-case-converter"
version = "0.2.30"
edition = "2021"

[[bin]]
name = "santui-case-converter"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.30", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arboard = "3"
convert_case = "0.11"
