[package]
name = "santui-clipboard-history"
version = "0.2.32"
edition = "2021"

[[bin]]
name = "santui-clipboard-history"
path = "src/main.rs"

[dependencies]
santui-ipc  = { path = "../../ipc",  version = "0.2.32", default-features = false }
arboard     = "3.6"
serde       = { workspace = true }
serde_json  = { workspace = true }
log         = { workspace = true }
env_logger  = { workspace = true }
