[package]
name = "santui-color-picker"
version = "0.2.29"
edition = "2021"

[[bin]]
name = "santui-color-picker"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.29", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arboard = "3"
