[package]
name = "santui-currency-converter"
version = "0.2.28"
edition = "2021"

[[bin]]
name = "santui-currency-converter"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.28", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = "3"
log = { workspace = true }
env_logger = { workspace = true }
