[package]
name = "santui-dictionary-thesaurus"
version = "0.2.31"
edition = "2021"

[[bin]]
name = "santui-dictionary-thesaurus"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.31", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ureq = "3"
arboard = "3"
urlencoding = "2"
