[package]
name = "santui-dns-globe"
version = "0.2.32"
edition = "2021"

[[bin]]
name = "santui-dns-globe"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.32", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arboard = "3"
