[package]
name = "santui-docker-dashboard"
version = "0.2.28"
edition = "2021"

[[bin]]
name = "santui-docker-dashboard"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.28", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
