[package]
name = "santui-file-diff"
version = "0.2.31"
edition = "2021"

[[bin]]
name = "santui-file-diff"
path = "src/main.rs"

[dependencies]
santui-ipc = { path = "../../ipc", version = "0.2.31", default-features = false }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
